Definicion de las listas

--- a/Tarea2/Tarea2/Tarea2.vcxproj
+++ b/Tarea2/Tarea2/Tarea2.vcxproj
@@ -151,9 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ListaSimple.h" />
+    <ClInclude Include="ListaSimpleB.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ListaSimple.cpp" />
+    <ClCompile Include="ListaSimpleB.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
